@@ -9,6 +9,9 @@ To do :
 
 Log:
 
+- 20/02/2006, version 0.0.5: roms
+	- error message is a glib allocated string for now.
+
 - 23/01/2006, version 0.0.4: roms
 	- modified to follow ticables2 API changes.
 	- fixed critical bug in ticalcs2.pc.in: the header location was include/tilp instead of include/tilp2
